Added color to the table

--- a/Lesson3/Activity.html
+++ b/Lesson3/Activity.html
@@ -6,8 +6,8 @@
     </head>
     <body>
         <a href="https://github.com/">visit github</a>
-        <table border="5">
-            <tr>
+        <table border="5" bgcolor="pink">
+            <tr bgcolor="yellow">
                 <th>Name of students</th>
                 <th>total mark</th>
                 <th>GPA</th>
