--- a/module 1 lesson 1/Homework1.html
+++ b/module 1 lesson 1/Homework1.html
@@ -1,3 +1,12 @@
 <!DOCTYPE html>
-<html></html>
-<head></head>
+<html>
+<head>
+    <title>Our Country</title>
+</head>    
+</html>
+<body>
+<!--This is my homework-->    
+</body>
+<h2>Our Country</h2>
+Bangladesh is our <i >motherland.</i> It is the country of natural beauty. The peaple of Bangladesh are poor and <b>illiterate</b> .The peaple of Bangladesh are friendly and indrustrious. It is a over populated country. So Bangladesh faces unemployment problem.
+<mark>Bangladesh is the country of natural calamities.</mark>
